--- a/views/reserva-online.erb
+++ b/views/reserva-online.erb
@@ -86,7 +86,7 @@
               <% if booking_item_family.pickup_return_place %>
 		      <div class="formrow">
 	              <div class="collection_place">
-	                 <label for="pickup_place" class="fieldtitle columna1"><%=t.new_booking.place%> * </label>
+	                 <label for="pickup_place" class="fieldtitle columna1"><%=t.new_booking.place%></label>
 	                 <select name="pickup_place" class="fieldcontrol" id="pickup_place">
 	                 </select>
 	              </div>
@@ -143,7 +143,7 @@
 	          <% if booking_item_family.pickup_return_place %>
 	          <div class="formrow">
 	               <div class="return_place">
-	                  <label for="return_place" class="fieldtitle columna1"><%=t.new_booking.place%> * </label>
+	                  <label for="return_place" class="fieldtitle columna1"><%=t.new_booking.place%></label>
 	      	          <select name="return_place" id="return_place" class="fieldcontrol">
 	                  </select>
                    </div>
